# dwl

./: .clang-format  .gitignore  CHANGELOG.md  LICENSE  LICENSE.dwm  LICENSE.tinywl  Makefile  README.md  client.h  config.def.h  config.h  config.mk  default.nix  dwl.1  dwl.c  dwl.c.orig  generate-version.sh  ipc-v2.patch  meson.build  meson_options.txt  mng-varcol.c  push.c  push.h  util.c  util.h
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement-idea.md
.github/workflows/: test-all-patches-action.yml  testPatches.sh
patches/: 04-movestack.patch  alwayscenter.patch  dragmfact.patch  ipc-v2.patch  main...917Wolf:vol.patch  output-power-management.patch  push.patch  swallow.patch  unclutter.patch  vanitygaps.patch
protocols/: dwl-ipc-unstable-v2.xml  meson.build
subprojects/: wlroots.wrap
